# IO_BIH

./: README.md  find_executables.sh
BHOI_/2024/potraga-za-blagom/: .gitignore  CMakeLists.txt  package_simulator.bat  potraga-za-blagom.cpp  task.yaml
BHOI_/2024/potraga-za-blagom/INPUT-OUTPUT/: input0.txt  input10.txt  input12.txt  input13.txt  input14.txt  input16.txt  input2.txt  input21.txt  input23.txt  input28.txt  input29.txt  input31.txt  input33.txt  input35.txt  input36.txt  input4.txt  input40.txt  input44.txt  input45.txt  input48.txt  input49.txt  input5.txt  input52.txt  input53.txt  input54.txt  input55.txt  input56.txt  input57.txt  input58.txt  input59.txt  input6.txt  input61.txt  input62.txt  input63.txt  input67.txt  input68.txt  input69.txt  input7.txt  input70.txt  input77.txt  (+14 more)
BHOI_/2024/potraga-za-blagom/check/: manager.cpp  run_all.sh  run_single.sh
BHOI_/2024/potraga-za-blagom/input/: input1.txt  input11.txt  input15.txt  input17.txt  input18.txt  input19.txt  input20.txt  input22.txt  input24.txt  input25.txt  input26.txt  input27.txt  input3.txt  input30.txt  input32.txt  input34.txt  input37.txt  input38.txt  input39.txt  input41.txt  input42.txt  input43.txt  input46.txt  input47.txt  input50.txt  input51.txt  input60.txt  input64.txt  input65.txt  input66.txt  input71.txt  input72.txt  input73.txt  input74.txt  input75.txt  input76.txt  input79.txt  input84.txt  input85.txt  input86.txt  (+6 more)
BHOI_/2024/potraga-za-blagom/simulator/: auto_runner.py  config_pane.py  file_selector_window.py  island_config.py  main.py  main_window.py  utils.py  (+5 more)
(+2056 files in other folders)
